--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>
           <img src="assets/img/logo.svg" alt="Ashiras, inc." />
         </h1>
-        <a href="#">ABOUT US</a>
+        <a href="about.html">ABOUT US</a>
       </section>
     </article>
   </body>
