--- a/business.html
+++ b/business.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashiras, inc. - ABOUT US</title>
+    <title>Ashiras, inc. - BUSINESS</title>
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/common.css">
@@ -17,48 +17,30 @@
     <nav>
       <ul>
         <li><a href="index.html"><img src="assets/img/logo.svg" alt="home" /></a></li>
-        <li class="bold"><a href="about.html">ABOUT US</a></li>
-        <li><a href="business.html">BUSINESS</a></li>
+        <li><a href="about.html">ABOUT US</a></li>
+        <li class="bold"><a href="business.html">BUSINESS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
     </nav>
-    <article id="about">
-      <h1>ABOUT US</h1>
-      <div class="subtitle">会社概要</div>
+    <article id="business">
+      <h1>BUSINESS</h1>
+      <div class="subtitle">業務内容</div>
       <p>
         テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
       </p>
-      <img src="#" alt="" />
       <section>
-        <ul>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-        </ul>
+        <img src="#" alt="" />
+        <img src="#" alt="" />
+        <img src="#" alt="" />
       </section>
-    </article> <!-- about -->
+      <p>
+        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+      </p>
+      <section>
+        <img src="#" alt="" />
+        <img src="#" alt="" />
+        <img src="#" alt="" />
+      </section>
+    </article> <!-- business -->
   </body>
 </html>
