--- a/contact.html
+++ b/contact.html
@@ -37,27 +37,24 @@
           <input class="mdl-textfield__input" type="text" id="name" />
           <label class="mdl-textfield__label" for="sample3">NAME</label>
         </div>
-      </form>
 
-      <form action="#">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textfield-demo">
           <input class="mdl-textfield__input" type="text" id="company" />
           <label class="mdl-textfield__label" for="sample3">COMPANY</label>
         </div>
-      </form>
 
-      <form action="#">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textfield-demo">
           <input class="mdl-textfield__input" type="email" id="email" />
           <label class="mdl-textfield__label" for="sample3">E-MAIL</label>
+          <span class="mdl-textfield__error">メールアドレスを入力してください。</span>
         </div>
-      </form>
 
-      <form action="#">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textfield-demo">
-          <input class="mdl-textfield__input" type="textarea" id="message" />
+          <textarea class="mdl-textfield__input" id="message" /></textarea>
           <label class="mdl-textfield__label" for="sample3">MESSAGE</label>
         </div>
+
+        <input type="submit" class="submit" value="SUBMIT">
       </form>
 
   </article> <!-- contact -->
