--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashiras, inc.</title>
 
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Web Starter Kit">
+    <link rel="icon" sizes="192x192" href="assets/touch/chrome-touch-icon-192x192.png">
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <link rel="apple-touch-icon" href="assets/touch/apple-touch-icon.png">
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#2F3BA2">
+
+    <!-- Color the status bar on mobile devices -->
+    <meta name="theme-color" content="#2F3BA2">
+
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/common.css">
-    <link rel="stylesheet" href="assets/css/ashi_dsk.css" media="screen and (min-width:960px)">
-    <link rel="stylesheet" href="assets/css/ashi_tab.css" media="screen and (max-width:959px)">
-    <link rel="stylesheet" href="assets/css/ashi_smp.css" media="screen and (max-width:599px)">
   </head>
   <body>
     <article id="home">
@@ -19,7 +40,7 @@
         <h1>
           <img src="assets/img/logo.svg" alt="Ashiras, inc." />
         </h1>
-        <a href="about.html">ABOUT US</a>
+        <!-- <a href="about.html">ABOUT US</a> -->
       </section>
     </article>
   </body>
