--- a/about.html
+++ b/about.html
@@ -6,59 +6,40 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashiras, inc. - ABOUT US</title>
-
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/common.css">
-    <link rel="stylesheet" href="assets/css/ashi_dsk.css" media="screen and (min-width:960px)">
-    <link rel="stylesheet" href="assets/css/ashi_tab.css" media="screen and (max-width:959px)">
-    <link rel="stylesheet" href="assets/css/ashi_smp.css" media="screen and (max-width:599px)">
+    <link rel="stylesheet" href="assets/css/ashi_dsk.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="index.html"><img src="assets/img/logo.svg" alt="home" /></a></li>
-        <li class="bold"><a href="about.html">ABOUT US</a></li>
-        <li><a href="business.html">BUSINESS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
+        <li class="logo"><a href="index.html"><img src="assets/img/logo.svg" alt="home" /></a></li>
+        <li><a href="#about">ABOUT US</a></li>
+        <li><a href="#business">BUSINESS</a></li>
+        <li><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
     <article id="about">
-      <h1>ABOUT US</h1>
-      <div class="subtitle">会社概要</div>
+      <h2>ABOUT US</h2>
       <p>
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+        2016年設立。HTML5を中心にAngularやReact, Polymerなどを用いて、Webエンタープライズへインタラクティブな技術を導入・コンサルティングを行っています。
       </p>
-      <img src="#" alt="" />
-      <section>
-        <ul>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-          <li>
-            <b>項目名</b>
-            <span>テキストテキストテキストテキストテキスト</span>
-          </li>
-        </ul>
-      </section>
-    </article> <!-- about -->
+      <p>
+        コミュニティ活動、またはメディアなどへの執筆活動や登壇を通じてWebへの貢献を行っています。
+      </p>
+    </article>
+
+    <article id="business">
+      <h2>BUSINESS</h2>
+      <h3>Webアプリケーション開発のご相談</h3>
+      <p>HTML5を利用したモダンなWebアプリケーションを中心に制作活動やコンサルティングを行っています。Webエンタープライズ向けにソリューションを展開しております。</p>
+      <h3>セミナーのご相談</h3>
+      <p>弊社が取り組んでいる技術に関して関心がございましたらセミナーや勉強会での登壇等随時受け付けております。弊社スタッフはコミュニティ活動を積極的に行っておりますので、コンタクトを取って頂きご依頼頂きたく存じ上げます。</p>
+    </article> <!-- business -->
+
+    <article id="contact">
+      <h2>CONTACT</h2>
+      <p>弊社スタッフはWebへの貢献を最優先課題として取り組んでおります。スタッフが参加しているコミュニティへご参加して頂き、コンタクトして頂けると幸いです。またSNSからのコンタクトも随時行っておりますのでお気軽にご連絡をお願い致します。</p>
+    </article> <!-- contact -->
   </body>
 </html>
