--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1>
           <img src="assets/img/logo.svg" alt="Ashiras, inc." />
         </h1>
-        <!-- <a href="about.html">ABOUT US</a> -->
+        <a href="about.html">ABOUT US</a>
       </section>
     </article>
   </body>
