--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
     <nav>
       <ul>
         <li class="logo"><a href="index.html"><img src="assets/img/logo.svg" alt="home" /></a></li>
-        <li><a href="#about">ABOUT US</a></li>
-        <li><a href="#business">BUSINESS</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li class="menu"><a href="#about">ABOUT US</a></li>
+        <li class="menu"><a href="#business">BUSINESS</a></li>
+        <li class="menu"><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
     <article id="about">
@@ -30,14 +30,17 @@
     <article id="business">
       <h2>BUSINESS</h2>
       <h3>Webアプリケーション開発のご相談</h3>
-      <p>HTML5を利用したモダンなWebアプリケーションを中心に制作活動やコンサルティングを行っています。Webエンタープライズ向けにソリューションを展開しております。</p>
+      <p>HTML5を利用したモダンなWebアプリケーションを中心に制作活動やコンサルティングを行っています。</p>
+      <p>Webエンタープライズ向けにソリューションを展開しております。</p>
       <h3>セミナーのご相談</h3>
-      <p>弊社が取り組んでいる技術に関して関心がございましたらセミナーや勉強会での登壇等随時受け付けております。弊社スタッフはコミュニティ活動を積極的に行っておりますので、コンタクトを取って頂きご依頼頂きたく存じ上げます。</p>
+      <p>弊社が取り組んでいる技術に関して関心がございましたらセミナーや勉強会での登壇等随時受け付けております。</p>
+      <p>弊社スタッフはコミュニティ活動を積極的に行っておりますので、コンタクトを取って頂きご依頼頂きたく存じ上げます。</p>
     </article> <!-- business -->
 
     <article id="contact">
       <h2>CONTACT</h2>
-      <p>弊社スタッフはWebへの貢献を最優先課題として取り組んでおります。スタッフが参加しているコミュニティへご参加して頂き、コンタクトして頂けると幸いです。またSNSからのコンタクトも随時行っておりますのでお気軽にご連絡をお願い致します。</p>
+      <p>弊社スタッフはWebへの貢献を最優先課題として取り組んでおります。スタッフが参加しているコミュニティへご参加して頂き、コンタクトして頂けると幸いです。</p>
+      <p>またSNSからのコンタクトも随時行っておりますのでお気軽にご連絡をお願い致します。</p>
     </article> <!-- contact -->
   </body>
 </html>
