--- a/about.html
+++ b/about.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashiras, inc. - ABOUT US</title>
     <link rel="stylesheet" href="assets/css/common.css">
+
+    <!-- icon -->
+    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_48.png" sizes="48x48">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/ashiras_fav_152.png">
+
   </head>
   <body>
     <nav>
