--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashiras, inc.</title>
 
-    <!-- icon -->
-    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_48.png" sizes="48x48">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/ashiras_fav_152.png">
-
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
 
@@ -32,10 +26,10 @@
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#2F3BA2">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
 
     <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#2F3BA2">
+    <meta name="theme-color" content="#2A95E4">
 
     <link rel="stylesheet" href="assets/css/common.css">
   </head>
