--- a/about.html
+++ b/about.html
@@ -3,17 +3,35 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Ashiras, inc. は、コミュニティを通して Web に貢献しています。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashiras, inc. - ABOUT US</title>
+    <title>Ashiras, inc.</title>
+
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Web Starter Kit">
+    <link rel="icon" sizes="192x192" href="assets/touch/chrome-touch-icon-192x192.png">
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <link rel="apple-touch-icon" href="assets/touch/apple-touch-icon.png">
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+
+    <!-- Color the status bar on mobile devices -->
+    <meta name="theme-color" content="#2A95E4">
+
     <link rel="stylesheet" href="assets/css/common.css">
-
-    <!-- icon -->
-    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="assets/img/ashiras_fav_48.png" sizes="48x48">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/ashiras_fav_152.png">
-
   </head>
   <body>
     <nav>
