--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Ashiras, inc. は、Web技術を利用したエンタープライズ・アプリケーションを開発・コンサルティングしている企業です。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashiras, inc.</title>
 
