--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
   <body>
     <nav>
       <ul>
-        <li class="logo"><a href="index.html"><img src="assets/img/logo.svg" alt="home" /></a></li>
+        <li class="logo"><a href="/"><img src="assets/img/logo.svg" alt="home" /></a></li>
         <li class="menu"><a href="#about">ABOUT US</a></li>
         <li class="menu"><a href="#business">BUSINESS</a></li>
         <li class="menu"><a href="#contact">CONTACT</a></li>
