--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <article id="about">
       <h2>ABOUT US</h2>
       <p>
-        2016年設立。HTML5を中心にAngularやReact, Polymerなどを用いて、Webエンタープライズへインタラクティブな技術を導入・コンサルティングを行っています。
+        2016年8月設立。Web技術をエンタープライズに導入・コンサルティングしています。
       </p>
       <p>
         コミュニティ活動、またはメディアなどへの執筆活動や登壇を通じてWebへの貢献を行っています。
@@ -55,11 +55,9 @@
     <article id="business">
       <h2>BUSINESS</h2>
       <h3>Webアプリケーション開発のご相談</h3>
-      <p>HTML5を利用したモダンなWebアプリケーションを中心に制作活動やコンサルティングを行っています。</p>
-      <p>Webエンタープライズ向けにソリューションを展開しております。</p>
+      <p>Angular, React, PolymerなどWebアプリケーションを中心に開発、コンサルティングを行いエンタープライズ向けにWebソリューションを展開しています。</p>
       <h3>セミナーのご相談</h3>
       <p>弊社が取り組んでいる技術に関して関心がございましたらセミナーや勉強会での登壇等随時受け付けております。</p>
-      <p>弊社スタッフはコミュニティ活動を積極的に行っておりますので、コンタクトを取って頂きご依頼頂きたく存じ上げます。</p>
     </article> <!-- business -->
 
     <article id="contact">
