--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <meta name="theme-color" content="#2A95E4">
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="styles.9c930966bd007c95e236.bundle.css" rel="stylesheet"/></head>
+</head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.805c558c775991314e71.bundle.js"></script><script type="text/javascript" src="polyfills.5f05e8078ce28822bdf1.bundle.js"></script><script type="text/javascript" src="vendor.726e1c64d255f990eade.bundle.js"></script><script type="text/javascript" src="main.b7db18c95be59ffd62d2.bundle.js"></script></body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
